<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DosJugadores">

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="729dp"
        android:background="@color/fondoPrincipal"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labelJugador"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:fontFamily="casual"
            android:text="@string/lblDosJugadores"
            android:textAlignment="center"
            android:textSize="48sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/btn_xo"
                android:fontFamily="casual"
                android:text="@string/btn1"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/btn_xo"
                android:fontFamily="casual"
                android:text="@string/btn2"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/btn_xo"
                android:fontFamily="casual"
                android:text="@string/btn3"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/btn_xo"
                android:fontFamily="casual"
                android:text="@string/btn4"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/btn_xo"
                android:fontFamily="casual"
                android:text="@string/btn5"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/btn_xo"
                android:fontFamily="casual"
                android:text="@string/btn6"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/btn_xo"
                android:fontFamily="casual"
                android:text="@string/btn8"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/btn_xo"
                android:fontFamily="casual"
                android:text="@string/btn8"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/btn_xo"
                android:fontFamily="casual"
                android:text="@string/btn9"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/lblTurno"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRegresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_redondo"
            android:backgroundTint="@color/btnDosJugadores"
            android:fontFamily="casual"
            android:text="Regresar"
            android:textColor="#0D47A1"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>